fix for collapsed chat manager

--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -97,6 +97,7 @@
 
 .chat-manager-list .saito-user {
   cursor: pointer;
+  min-height: 4.5rem;
 }
 
 .chat-body blockquote {
